fix recursive read-lock bugs found by lockdebug and reported by Geoff C. Wing and others.  ok'ed by Jason Thorpe. an earlier version was tested by Sverre Froyen. PR/38732 from oster@.